--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "<font size = \"4\">\n",
     "\n",
-    "In this code snippet we wanted to remove any unnecessary data in the dataframes, and rename one of the dataframe's columns to match ... . We removed any rows/tuples where the respective voter never wrote in a candidate even though they supposedly (according to the data) selected Write-In on their ballots. We removed these ballots from the data because they can be treated as blank ballots, and as such cannot help us understand any differences between each county's results, when considering differences between governor and presidential winners.\n",
+    "In this code snippet we wanted to remove any unnecessary data in the dataframes, and rename one of the dataframe's columns to match for overall understandability. We removed any rows/tuples where the respective voter never wrote in a candidate even though they supposedly (according to the data) selected Write-In on their ballots. We removed these ballots from the data because they can be treated as blank ballots, and as such cannot help us understand any differences between each county's results, when considering differences between governor and presidential winners.\n",
     "\n",
     "The column 'total_votes' in the \"clean_pres_df\" was renamed to votes for ease of understanding. 'total_votes' in this dataframe is equivalent to 'votes' in the governor dataframe and we wanted the data to reflect this."
    ]
