added intro + revised reflection

--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9cb8eba9",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:blue\"> Introduction </span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae1557a",
+   "metadata": {},
+   "source": [
+    "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we examined voter turnout in relation to gubernatorial and presidential election results at the county level. We categorized counties into two main types: Split-party and same-party. Split-party counties voted for governors and presidential candidates of differing parties, while same-party counties voted for governors and presidential candidates of the same. In comparing these two types, we ask the research question: How may voter turnout differ between split-party and main-party counties? TExploring this question allows us to consider how political diversity within a county may impact civic engagement.\n",
+    "\n",
+    "Based on our data analysis, we concluded that split-party counties tend to have smaller voter turnout in comparison to same-party counties. Additionally, as governor turnout increases, presidential turnout tends to increase as well. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd44780b",
    "metadata": {},
    "source": [
@@ -26,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1568dbfd",
    "metadata": {},
    "outputs": [
@@ -97,8 +115,6 @@
    "id": "f6b88b03",
    "metadata": {},
    "source": [
-    "<font size = \"4\">\n",
-    "\n",
     "In this code snippet we wanted to remove any unnecessary data in the dataframes, and rename one of the dataframe's columns to match ... . We removed any rows/tuples where the respective voter never wrote in a candidate even though they supposedly (according to the data) selected Write-In on their ballots. We removed these ballots from the data because they can be treated as blank ballots, and as such cannot help us understand any differences between each county's results, when considering differences between governor and presidential winners.\n",
     "\n",
     "The column 'total_votes' in the \"clean_pres_df\" was renamed to votes for ease of understanding. 'total_votes' in this dataframe is equivalent to 'votes' in the governor dataframe and we wanted the data to reflect this."
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "eb51ffbb",
    "metadata": {},
    "outputs": [
@@ -116,7 +132,7 @@
        "Index(['state', 'county', 'candidate', 'party', 'votes', 'won'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a52ef7b3",
    "metadata": {},
    "outputs": [],
@@ -595,6 +611,16 @@
     "From the 2020 U.S. election results, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. Additionally, our analysis shows a **weak correlation between the percentage of votes for Republican candidates in presidential vs. governor races at the county level**, indicating that counties that elect a majority for one party in the presidential race are somewhat more likely to elect a governor from the same party. A **slope of 0.82** indicates that the governor's share of votes affects the presidential party winner **less than vice versa**, meaning presidential outcomes are slightly more predictive of governor results than the other way around. Nonetheless, the **R² value of only 0.25** suggests that this relationship is relatively weak and other factors likely influence voting patterns across counties.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfe61a6f",
+   "metadata": {},
+   "source": [
+    "From the 2020 U.S. election results, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. A **slope of 0.82** implies that as votes for Republic Governor increases, the votes for Republican President increase as well.  Additionally, our analysis shows a **R² value of only 0.25**, which suggests that the total votes for a Republican Governor condidate explains only 25% of the variation in the total votes for Republic President; this means that this relationship is relatively weak and other factors likely influence voting patterns across counties. This allows us to infer that the Presidential candidate party may not be a strong predictor of the Governer candidate party.\n",
+    "\n",
+    " A limitation of our study is that we are unable to compare total population given each county with voter turn out. Because of this,  we are unable to draw conclusions on the reasons for the difference between split and same-party county voter turnout. However, this difference may be due to two main reasons. First, counties that are political divided may also have greater political apathy, leading to less voter turn out. Same-party counties may also simply have a larger population, such as LA county which has the largest population of a US county, introducing a potential confounder of county population size. "
+   ]
   }
  ],
  "metadata": {
@@ -613,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
