--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "add4227d",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
     "\n",
     "axes[0].set_xlabel(\"Percent of Total Votes for Democratic Governor\")\n",
     "axes[0].set_ylabel(\"Percent of Total Votes for Democratic President\")\n",
-    "axes[0].set_title(\"Dem Governor vs President vote share per county\")\n",
+    "axes[0].set_title(\"Democratic Governor vs President vote share per county\")\n",
     "axes[0].grid(True)\n",
     "axes[0].legend()\n",
     "\n",
