--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -21,7 +21,7 @@
    "id": "cae1557a",
    "metadata": {},
    "source": [
-    "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we examined voter turnout in relation to gubernatorial and presidential election results at the county level. We categorized counties into two main types: Split-party and same-party. Split-party counties voted for governors and presidential candidates of differing parties, while same-party counties voted for governors and presidential candidates of the same. In comparing these two types, we ask the research question: How may voter turnout differ between split-party and main-party counties? TExploring this question allows us to consider how political diversity within a county may impact civic engagement.\n",
+    "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we examined voter turnout in relation to gubernatorial and presidential election results at the county level. We categorized counties into two main types: Split-party and same-party. Split-party counties voted for governors and presidential candidates of differing parties, while same-party counties voted for governors and presidential candidates of the same. In comparing these two types, we ask the research questions: How may voter turnout differ between split-party and main-party counties? Exploring this question allows us to consider how political diversity within a county may impact civic engagement.\n",
     "\n",
     "Based on our data analysis, we concluded that split-party counties tend to have smaller voter turnout in comparison to same-party counties. Additionally, as governor turnout increases, presidential turnout tends to increase as well. "
    ]
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt  \n",
     "\n",
     "# Sum Democratic votes per county\n",
     "# group by state and county because many counties share the same name across different states. \n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "149141f8",
    "metadata": {},
    "outputs": [
@@ -723,8 +723,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "desc_stats = merged_votes[['gov_total_votes', 'gov_R_votes', 'pres_total_votes', 'pres_R_votes']].describe()\n",
     "\n",
     "# Display the descriptive statistics\n",
@@ -748,9 +746,9 @@
    "id": "dfe61a6f",
    "metadata": {},
    "source": [
-    "From the 2020 U.S. election results, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. A **slope of 0.82** implies that as votes for Republic Governor increases, the votes for Republican President increase as well.  Additionally, our analysis shows a **R² value of only 0.25**, which suggests that the total votes for a Republican Governor condidate explains only 25% of the variation in the total votes for Republic President; this means that this relationship is relatively weak and other factors likely influence voting patterns across counties. This allows us to infer that the Presidential candidate party may not be a strong predictor of the Governer candidate party.\n",
+    "From the 2020 U.S. election results, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. A **slope of 0.82** and **slope of 0.85** implies that as votes for Governor increases, the votes for President increase as well, regardless of party. Additionally, our analysis shows a **R² value of only 0.25**, which suggests that the total votes for a Republican Governor condidate explains only 25% of the variation in the total votes for Republic President. When comparing the relationship with the Democratic votes, our analysis shows a **R² value of only 0.33**, which suggests that the total votes for a Democratic Governor condidate explains only 33% of the variation in the total votes for Democratic President. This means that this relationship, regardless of party, is relatively weak and other factors likely influence voting patterns across counties. This allows us to infer that the Presidential candidate party may not be a strong predictor of the Governer candidate party.\n",
     "\n",
-    " A limitation of our study is that we are unable to compare total population given each county with voter turn out. Because of this,  we are unable to draw conclusions on the reasons for the difference between split and same-party county voter turnout. However, this difference may be due to two main reasons. First, counties that are political divided may also have greater political apathy, leading to less voter turn out. Same-party counties may also simply have a larger population, such as LA county which has the largest population of a US county, introducing a potential confounder of county population size. "
+    "A limitation of our study is that we are unable to compare total population given each county with voter turn out. Because of this,  we are unable to draw conclusions on the reasons for the difference between split and same-party county voter turnout. However, this difference may be due to two main reasons. First, counties that are political divided may also have greater political apathy, leading to less voter turn out. Same-party counties may also simply have a larger population, such as LA county which has the largest population of a US county, introducing a potential confounder of county population size. "
    ]
   }
  ],
