--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we examined voter turnout in relation to gubernatorial and presidential election results at the county level. We categorized counties into two main types: Split-party and same-party. Split-party counties voted for governors and presidential candidates of differing political parties, while same-party counties voted for governors and presidential candidates of the same. In comparing these two types, we ask the research questions: How may voter turnout differ between split-party and main-party counties? To what extent do counties vote similarly for governor and president within each party? Exploring this question allows us to consider how political diversity within a county may impact civic engagement.\n",
     "\n",
-    "Based on our data analysis, we concluded that split-party counties tend to have smaller voter turnout in comparison to same-party counties. Additionally, as governor turnout increases, presidential turnout tends to increase as well. "
+    "Based on our data analysis, we concluded that split-party counties tend to have smaller voter turnout in comparison to same-party counties. Additionally, counties tend to vote in the same party for governor and president, but the relationship is only moderate."
    ]
   },
   {
