--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -29,7 +29,7 @@
    "id": "cae1557a",
    "metadata": {},
    "source": [
-    "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we explored two research questions: How may voter turnout differ between split-party and main-party counties? To what extent do counties vote similarly for governor and president within each party? Exploring these questions allows us to consider how political diversity within a county may impact civic engagement.\n",
+    "The 2020 election was deeply polarizing for many communities in the United States. To investigate these political divides, we explored two research questions: How may voter turnout differ between split-party and main-party counties? To what extent do votes for the governor election predict those for the president? Exploring these questions allows us to consider how political diversity within a county may impact civic engagement.\n",
     "\n",
     "We began by examining voter turnout in relation to gubernatorial and presidential election results at the county level. We categorized counties into two main types: Split-party and same-party. Split-party counties voted for governors and presidential candidates of differing political parties, while same-party counties voted for governors and presidential candidates of the same. We concluded that split-party counties tend to have smaller voter turnout in comparison to same-party counties. \n",
     "\n",
