--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f9e71e0b",
    "metadata": {},
    "outputs": [
@@ -285,10 +285,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb026fa",
+   "id": "3055233b",
    "metadata": {},
    "source": [
-    "In each county, how strongly is the governor’s winning vote share correlated with the president’s winning vote share?"
+    "# <span style=\"color:blue\"> Figure 1: Results </span>  \n",
+    "\n",
+    "In this section of our analysis, we addressed the research question of how voter turnout may differ between split-party and main-party counties. Based on figure 1, we observe that split-party counties appear to have smaller voter turn out in camparison to same-party counties, given the samller medians. This could be due to the fact that politically dissonant communities may also experience less civic engagement, or that these communities have fewer voters to begin with. We can also observe that fewer counties are split-party in comparison to same-party counties. This may mean that split-party counties are less common than same-party counties.  "
    ]
   },
   {
@@ -447,6 +449,16 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b505ac2d",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:blue\"> Figures 2 & 3: Results </span>  \n",
+    "\n",
+    "In this section of our analysis, we saught address the research question of how strongly is the governor’s winning vote share correlated with the president’s winning vote share, in each county. Given our graphs, we observe a positive relationship, where as percent of total votes of governor increases, the percent of total votes for president also increases. This relationship is true for both political parties. "
    ]
   },
   {
@@ -679,7 +691,7 @@
    "id": "ce176aa8",
    "metadata": {},
    "source": [
-    "<span style=\"color: blue; font-size: 32px;\">2020 U.S. Election Results Analysis</span>\n",
+    "<span style=\"color: blue; font-size: 32px;\">2020 U.S. Election Results Discussion</span>\n",
     "\n",
     "\n",
     "From the 2020 U.S. election results in figure 1, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. A likely explanation for this difference is that many same-party counties are larger and more urban, resulting in higher total vote counts, while split-party counties tend to be smaller. A limitation of our study is that we are unable to compare total population given each county with voter turn out. Because of this, we are unable to draw causal conclusion about the relationship between voter turnout and political alignment in counties. \n",
