--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -696,8 +696,16 @@
     "\n",
     "From the 2020 U.S. election results in figure 1, we observe that the **median voter turnout is lower in split-ticket counties**, where voters elected governors and presidents from different parties. However, this pattern is **heavily skewed by a few high-turnout, same-party counties**, which raise the overall average. A likely explanation for this difference is that many same-party counties are larger and more urban, resulting in higher total vote counts, while split-party counties tend to be smaller. A limitation of our study is that we are unable to compare total population given each county with voter turn out. Because of this, we are unable to draw causal conclusion about the relationship between voter turnout and political alignment in counties. \n",
     "\n",
-    "Based on our figure 2 and 3, we observe  the **slopes of 0.82 and 0.85**, implying that as votes for Governor increases, the votes for President increase as well, regardless of party. Additionally, our analysis shows a **R² value of only 0.25**, which suggests that about a quarter of presidential voting patterns can be predicted from gubernatorial voting patterns. When comparing the relationship with the Democratic votes, our analysis shows a **R² value of only 0.33**, which suggests that about a third of Democratic presidential voting patterns can be predicted by gubernatorial voting patterns. The remaining variation may come from local factors, candidate differences, or ticket splitting. This means that this relationship, regardless of party, is relatively weak and other factors likely influence voting patterns across counties. Thus, we conclude that while counties tend to vote similarly across the two offices, but the Presidential candidate party may not be a strong predictor of the Governer candidate party.\n"
+    "Based on our figure 2 and 3, we observe  the **slopes of 0.82 and 0.85**, implying that as votes for Governor increases, the votes for President increase as well, regardless of party. These slopes suggest that the Presidential vote share is a slightly better predictor of the gubernatorial vote share than vice versa. Interestingly, The high y-intercept of 17.52 in the Democratic graph indicates that even in counties where the Democratic gubernatorial candidate receives minimal support, the Democratic presidential candidate still receives a notable baseline level of votes, in contrast to the much lower Republican y-intercept of 0.84. Additionally, our analysis shows a **R² value of only 0.25**, which suggests that about a quarter of presidential voting patterns can be predicted from gubernatorial voting patterns. When comparing the relationship with the Democratic votes, our analysis shows a **R² value of only 0.33**, which suggests that about a third of Democratic presidential voting patterns can be predicted by gubernatorial voting patterns. The remaining variation may come from local factors, candidate differences, or ticket splitting. This means that this relationship, regardless of party, is relatively weak and other factors likely influence voting patterns across counties. Thus, we conclude that while counties tend to vote similarly across the two offices, but the Presidential candidate party may not be a strong predictor of the Governer candidate party.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "229c3fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
