--- a/Final Project/Final.ipynb
+++ b/Final Project/Final.ipynb
@@ -49,7 +49,7 @@
    "id": "10cb45ab",
    "metadata": {},
    "source": [
-    "In our analysis, we used two datasets from the \"US_Election_2020\" folder: the dataset on county-level governor races (governors_county_candidate.csv) and the dataset on the county-level presidential race (president_county_candidate.csv). For both datasets, each row corresponds to a single candidate on the ballot within that county. The governor dataset had 5,145 rows and 6 columns, including the respective state, county, candidate, party, votes, and a won column representing whether the candidate won the county (True if they had won). The presidential dataset had 32,177 rows and 6 columns, with state, county, candidate, party, total_votes, and won. "
+    "In our analysis, we used two datasets from the \"US_Election_2020\" folder: the dataset on county-level governor races (governors_county_candidate.csv) and the dataset on the county-level presidential race (president_county_candidate.csv). We used a for loop to get the summary of both of datasets. For both datasets, each row corresponds to a single candidate on the ballot within that county. The governor dataset had 5,145 rows and 6 columns, including the respective state, county, candidate, party, votes, and a won column representing whether the candidate won the county (True if they had won). The presidential dataset had 32,177 rows and 6 columns, with state, county, candidate, party, total_votes, and won. "
    ]
   },
   {
